Bugfix for gift guide layout issues in hash urls

--- a/wp-content/themes/makeblog/less/make/giftguide2016.less
+++ b/wp-content/themes/makeblog/less/make/giftguide2016.less
@@ -310,12 +310,18 @@
     min-height: 500px;
     padding-top: 25px;
     position: relative;
+    @media screen and (min-width: 1200px) {
+      padding-left: 160px;
+      padding-right: 160px;
+    }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      padding-left: 130px;
+      padding-right: 130px;
+    }
     @media screen and (min-width: 768px) and (max-width: 991px) {
       padding-top: 45px;
     }
     .gg2016-review { //article
-      margin-left: 14%;
-      margin-right: 14%;
       margin-bottom: 50px;
       padding: 10px 15px 15px;
       display: none;
